--- a/client/src/assets/global.css
+++ b/client/src/assets/global.css
@@ -3,30 +3,150 @@
 }
 
 .fenix-regular {
-    font-family: "Fenix", serif;
-    font-weight: 400;
-    font-style: normal;
+    color: #FFF;
+
+text-align: center;
+font-family: Fenix;
+font-size: 48px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+letter-spacing: -0.96px;
+opacity: var(--sds-size-stroke-border);
   }
+
+  .seal {
+    width: 134px;
+height: 134px;
+flex-shrink: 0;
+  }
+
+  .seal-div {
+    display: flex;
+    padding-right: 46vw;
+    justify-content: end;
+    align-items: center;
+    padding-bottom: 2vh;
+  }
+
+.nav-flexbox {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 4px;
+}
+
+.nav-flexbox-child {
+    
+}
+
+  .nav-links {
+    color: #676767;
+    
+    text-align: center;
+    font-family: "Frank Ruhl Libre";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.48px;
+  }
+
+  .nav-links a {
+    margin: 0 8px; /* Space between links */
+    text-decoration: none; /* Remove underline */
+}
 
   .banner-parent {
     position: relative;
+    
   }
-  
+  .green-banner{
+    width: 1728px;
+    height: 281px;
+    flex-shrink: 0;
+    fill: linear-gradient(90deg, #7AB252 0%, #60A450 28.01%, #50984F 54.8%, #AECF87 100%);
+    opacity: var(--sds-size-stroke-border);
+  }
+
+
   .text-on-banner {
     position: absolute;
-    right: 70%;
+    right: 50%;
   left: 5%;
-  bottom: 25%;
+  bottom: 40%;
  
+  }
+
+  .progress-ring {
+    width: 200px;
+    height: 200px;
+    flex-shrink: 0;
+  }
+
+  .cert-flex {
+    display: flex;
+    padding-left: 5vw;
+    padding-top: 1vh;
+    padding-right: 48vw;
+   
+
+  }
+
+  .cert-text {
+    color: #000;
+    font-family: "Fira Sans";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+  }
+
+  .text-accordion-flex {
+    display: flex;
+    flex-direction: column;
+    padding-top: 7vh;
+    padding-left: 5vw;
+    margin-bottom: 10vh;
+  }
+
+  .accordion-flexbox {
+    display: flex;
+    width: 832px;
+    height: 80px;
+    padding: 24px 16px 24px 79px;
+    justify-content: center;
+    align-items: center;
+    gap: 267px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    border: 1px solid black;
+    opacity: var(--sds-size-stroke-border);
+    background: #ECECEC;
+    
   }
 
   .accordion-header {
     font-family: "Fenix", serif;
-    
     font-size: 48px;
     color: #FFFFFF;
-    padding-left: 300px;
+    padding-left: 200px;
     padding-top: 40px;
+  }
+
+  .accordion__button:before {
+    display: none;
+  }
+
+  .accordion_item {
+    display: none;
+  }
+
+  .accordion-title {
+    font-family: "Fira Sans", san serif;
+    font-size: 20px;
+    color: black;
+    font-weight: 700;
   }
 
   .gradient {
@@ -46,5 +166,14 @@ height: 281px;
   }
 
   .accordion-div {
-    background-color: #ECECEC;  
+    display: flex;
+    justify-content: 
+    gap: 16px;
+    margin-bottom: 16px;
+    border: 2px solid black;
+    border-radius: 8px;
   }
+
+ .accordion_item {
+    display: none;
+ }
