--- a/client/src/assets/global.css
+++ b/client/src/assets/global.css
@@ -122,12 +122,12 @@
 }
 
 
-.accordion-title {
+/* .accordion-title {
     font-family: "Fira Sans", san serif;
     font-size: 20px;
     color: black;
     font-weight: 700;
-}
+} */
 
 .accordion-div {
     display: flex;
