--- a/client/src/assets/global.css
+++ b/client/src/assets/global.css
@@ -7,6 +7,45 @@
     box-sizing: border-box;
 }
 
+.expanded-accordion {
+    display: flex;
+    height: 81px;
+    width: 826px;
+    border-radius: 10px 10px 0 0;
+    border: 1px solid black;
+    background-color: #ECECEC;
+    flex-shrink: 0;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 5.25 em;
+    padding-top: 1.5 rem;
+    padding-right: 2.25 rem;
+    padding-bottom: 1.5 rem;
+    margin-top: 1 rem;
+   
+    border-bottom: none;
+    
+}
+
+.collapsed-accordion {
+    display: flex;
+    height: 80px;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: #ECECEC;
+    flex-shrink: 0;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 2.25 rem;
+    padding-top: 1.5 rem;
+    padding-right: 1 rem;
+    padding-bottom: 1.5 rem;
+    margin-top: 1 rem;
+    margin-bottom: 15px;
+
+}
+
+
 
 
 
