cloudinary get request as well as metadata routes working, created modal for file deletion, mapped files to correct sections.  Still need to make sure the page re-renders once a new file is uploaded

--- a/client/src/assets/global.css
+++ b/client/src/assets/global.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+.overflow-hidden {
+    overflow: hidden; 
+}
+
 .expanded-accordion {
     display: flex;
     height: 81px;
