--- a/client/src/assets/global.css
+++ b/client/src/assets/global.css
@@ -50,6 +50,17 @@
 }
 
 
+.mobile-menu {
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(100%); 
+}
+
+.mobile-menu.open {
+    transform: translateX(0); 
+}
+
+
+
 
 
 
